syntax = "proto3";
package shipping;

import "protoc-gen-openapiv2/options/annotations.proto";
import "google/api/annotations.proto";

import "v1/shipping/request.proto";
import "v1/shipping/response.proto";
import "v1/user/option.proto";



option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "SHIPPING SERVICE API";
    version: "1.0.0";
    description: "API for SHIPPING services";
  };
  schemes: [HTTPS, HTTP];
  consumes: "application/json";
  produces: "application/json";
  security_definitions: {
    security: {
      key: "Bearer"
      value: {
        type: TYPE_API_KEY;
        in: IN_HEADER;
        name: "Authorization";
        description: "Bearer Token (e.g., JWT) for authentication. Format: `Bearer YOUR_TOKEN`";
      }
    }
  };
  security: {
    security_requirement: {
      key: "Bearer";
      value: {}
    }
  };
};


service ShippingProviderService {
  rpc CreateShippingProvider(shipping.CreateShippingProviderRequest) returns (shipping.CreateShippingProviderResponse){
    option (user.acl) = {
      roles: [SUPER_ADMIN, ADMIN],
      is_public: false,
      http: {
        method: "post",
        url: "/v1/shipping/shipping_providers"
      }
    };
    option (google.api.http) = {
      post: "/v1/shipping/shipping_providers"
      body: "*",
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "create a new shipping provider";
      tags: ["ShippingProviderService"];
      security: {
        security_requirement: {
          key: "Bearer";
          value: {}
        }
      };
    };
  };
  rpc GetShippingProviderById(shipping.GetShippingProviderByIdRequest) returns (shipping.GetShippingProviderByIdResponse){
    option (user.acl) = {
      roles: [SUPER_ADMIN, ADMIN, CUSTOMER, CUSTOMER_MEMBERSHIP],
      is_public: false,
      http: {
        method: "get",
        url: "/v1/shipping/shipping_providers/{id}"
      }
    };
    option (google.api.http) = {
      get: "/v1/shipping/shipping_providers/{id}"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "get a new shipping provider by provided id";
      tags: ["ShippingProviderService"];
      security: {
        security_requirement: {
          key: "Bearer";
          value: {}
        }
      };
    };
  };
  rpc UpdateShippingProvider(shipping.UpdateShippingProviderRequest) returns (shipping.UpdateShippingProviderResponse) {
    option (user.acl) = {
      roles: [SUPER_ADMIN, ADMIN],
      is_public: false,
      http: {
        method: "put",
        url: "/v1/shipping/shipping_providers/{id}"
      }
    };
    option (google.api.http) = {
      put: "/v1/shipping/shipping_providers/{id}"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "update a shipping provider by provided id";
      tags: ["ShippingProviderService"];
      security: {
        security_requirement: {
          key: "Bearer";
          value: {}
        }
      };
    };
  };
  rpc DeleteShippingProvider(shipping.DeleteShippingProviderRequest) returns (shipping.DeleteShippingProviderResponse){
    option (user.acl) = {
      roles: [SUPER_ADMIN, ADMIN],
      is_public: false,
      http: {
        method: "delete",
        url: "/v1/shipping/shipping_providers/{id}"
      }
    };
    option (google.api.http) = {
      delete: "/v1/shipping/shipping_providers/{id}"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "delete shipping provider by provided id";
      tags: ["ShippingProviderService"];
      security: {
        security_requirement: {
          key: "Bearer";
          value: {}
        }
      };
    };
  };
  rpc ListShippingProviders(shipping.ListShippingProvidersRequest) returns (shipping.ListShippingProvidersResponse) {
    option (user.acl) = {
      roles: [SUPER_ADMIN, ADMIN, CUSTOMER, CUSTOMER_MEMBERSHIP],
      is_public: false,
      http: {
        method: "get",
        url: "/v1/shipping/shipping_providers"
      }
    };
    option (google.api.http) = {
      get: "/v1/shipping/shipping_providers"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "get a list shipping provider by provided request";
      tags: ["ShippingProviderService"];
      security: {
        security_requirement: {
          key: "Bearer";
          value: {}
        }
      };
    };
  };
}