syntax = "proto3";
package shipping;
option java_package = "com.ferza17.ecommercemicroservicesv2.v1.shipping";

import "v1/shipping/model.proto";
import "v1/user/model.proto";
import "v1/payment/model.proto";
import "google/protobuf/timestamp.proto";

// SHIPPING PROTO DESCRIPTION

message ShippingFullResponse {
  string id = 1;
  user.User user = 2;
  payment.Payment payment = 3;
  shipping.ShippingProvider shipping_provider = 4;
  google.protobuf.Timestamp created_at = 100;
  google.protobuf.Timestamp updated_at = 1002;
  optional google.protobuf.Timestamp discarded_at = 1003;
}

message CreateShippingResponse {
  string message = 1;
  string status = 2;
  message CreateShippingResponseData {
    string id = 1;
  }
  CreateShippingResponseData data = 3;
}

message GetShippingByIdResponse {
  string message = 1;
  string status = 2;
  shipping.ShippingFullResponse data = 3;
}

message ListShippingResponse {
  string message = 1;
  string status = 2;
  repeated shipping.Shipping data = 3;
}

message UpdateShippingResponse {
  string message = 1;
  string status = 2;
  message UpdateShippingResponseData {
    string id = 1;
  }
  UpdateShippingResponseData data = 3;
}

message DeleteShippingResponse {
  string message = 1;
  string status = 2;
  message DeleteShippingResponseData {
    string id = 1;
  }
  DeleteShippingResponseData data = 3;
}


// SHIPPING PROVIDER PROTO DEFINITION
message GetShippingProviderByIdResponse {
  string message = 1;
  string status = 2;
  shipping.ShippingProvider data = 3;
}

message ListShippingProvidersResponse {
  string message = 1;
  string status = 2;
  message ListShippingProvidersResponseData {
    repeated shipping.ShippingProvider shipping_providers = 1;
    uint32 total_count = 2;
    uint32 page = 3;
    uint32 limit = 4;
  }
  ListShippingProvidersResponseData data = 3;
}